force-app/main/default/objects/custom_create82__c/custom_create82__c.object-meta.xml
<CustomObject>
    <label>Custom created object82</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects82</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>