force-app/main/default/objects/custom_create82__c/fields/custom_create_82field589__c.field-meta.xml
<CustomField>
    <fullName>custom_create_82field589__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 82field589</label>
    <type>Checkbox</type>
</CustomField>